Adding Docker support for the Jenkins scheduler so that Jenkins slaves are launched within Docker containers.